fixed safari sidebar issues on mobile

--- a/packages/augur-simplified/src/modules/sidebar/sidebar.styles.less
+++ b/packages/augur-simplified/src/modules/sidebar/sidebar.styles.less
@@ -14,6 +14,7 @@ div.Sidebar {
     display: grid;
     grid-template-columns: 1fr;
     min-height: unset;
+    height: 100%;
     grid-template-rows: @size-72 auto @size-72;
   }
 
